crates/swc_ecma_parser/tests/flow/types/object/unexpected_static_003.js
// error: object types don't have static fields (including spread)
type C = { static ...X }
